--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.4",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
-    "react-router-dom": "^6.19.0"
+    "react-router-dom": "^6.19.0",
+    "sweetalert2": "^11.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
